feat: initial working snapshots

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "electron-react-boilerplate",
   "description": "A foundation for scalable desktop apps",
   "scripts": {
-    "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
+    "build": "concurrently \"npm run build:main\" \"npm run build:renderer\" \"npm run build:snapshot\"",
     "build:main": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.main.prod.ts",
     "build:renderer": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.prod.ts",
+    "build:snapshot": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.snapshot.prod.ts",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir release/app",
     "lint": "cross-env NODE_ENV=development eslint . --ext .js,.jsx,.ts,.tsx",
-    "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never",
+    "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never && npm run snapshot",
     "postinstall": "ts-node .erb/scripts/check-native-dep.js && electron-builder install-app-deps && cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.ts && opencollective-postinstall",
+    "snapshot": "cross-env TS_NODE_TRANSPILE_ONLY=true ts-node ./.erb/scripts/snapshot.ts && npm run snapshot-cp",
+    "snapshot-cp": "cross-env TS_NODE_TRANSPILE_ONLY=true ts-node ./.erb/scripts/snapshot-copy.ts",
     "start": "ts-node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
     "start:main": "cross-env NODE_ENV=development electron -r ts-node/register/transpile-only ./src/main/main.ts",
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
@@ -175,14 +178,17 @@
     "browserslist-config-erb": "^0.0.3",
     "chalk": "^4.1.2",
     "concurrently": "^6.5.1",
+    "copy-webpack-plugin": "^10.2.1",
     "core-js": "^3.20.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.3.1",
     "detect-port": "^1.3.0",
-    "electron": "^16.0.5",
+    "electron": "16.0.0",
     "electron-builder": "22.13.1",
     "electron-devtools-installer": "^3.2.0",
+    "electron-link": "^0.6.0",
+    "electron-mksnapshot": "^16.0.0",
     "electron-notarize": "^1.1.1",
     "electron-rebuild": "^3.2.5",
     "eslint": "^8.5.0",
@@ -233,7 +239,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "v8-compile-cache": "^2.3.0"
   },
   "devEngines": {
     "node": ">=14.x",
