--- a/package.json
+++ b/package.json
@@ -185,7 +185,7 @@
     "css-minimizer-webpack-plugin": "^3.3.1",
     "detect-port": "^1.3.0",
     "electron": "16.0.0",
-    "electron-builder": "22.13.1",
+    "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
     "electron-link": "^0.6.0",
     "electron-mksnapshot": "^16.0.0",
